--- a/main.tex
+++ b/main.tex
@@ -103,7 +103,7 @@
 \thispagestyle{plain}
 \section*{Agradecimientos}
 
-Necesito agradecer a mis padres, quienes en su infinita paciencia vieron como se gestó este trabajo de inicio a fin, con la incertidumbre de si se terminaría algún día. No es necesario mencionar que sin su apoyo económico y emocional este trabajo no existiría.
+Debo agradecer a mis padres, quienes en su infinita paciencia vieron como se gestó este trabajo de inicio a fin, con la incertidumbre de si se terminaría algún día. No es necesario mencionar que sin su apoyo económico y emocional este trabajo no existiría.
 \bigskip
 
 Debo darle las gracias también a mi asesor, el Dr. Pablo Lam, por su atención incodicional durante toda la realización de este trabajo y su firme convicción en que se podría terminar de forma satisfactoria, sin mencionar la gran ayuda y orientación sobre todos los detalles técnicos y burocráticos necesarios para iniciar y terminar esta tesis. No está de más agradecer a la Dra. Myriam Maldonado, al Dr. César Escobar, al M. en C. Andrés Sabino y al Dr. David Bretón por tomarse la molestia de leer este trabajo y ayudarme a mejorarlo. A final de cuentas, un trabajo siempre es incompleto si no incluye enfoques, observaciones y puntos de vista diferentes al de uno. Cualquier error que se encuentre en este trabajo recae únicamente sobre mi.
