--- a/lec_02.tex
+++ b/lec_02.tex
@@ -1,14 +1,17 @@
 %%% Estructura del anillo
 \newpage
+\thispagestyle{empty}
+\
+\newpage
 \pagenumbering{arabic}
 \section{Estructura del anillo de funciones aritméticas}
 
 \begin{definition}
-A partir de ahora, nos referiremos como \textbf{función aritmética} a cualquier función $f : \mathbb{N} \longrightarrow \mathbb{C}$. Se denota al conjunto de todas las funciones aritméticas como $\mathcal{A}$.
+Se entenderá como \textbf{función aritmética} a cualquier función $f : \mathbb{N} \longrightarrow \mathbb{C}$. Se denota al conjunto de todas las funciones aritméticas como $\mathcal{A}$.
 \end{definition}
 
 \begin{definition}[Función constante]
-La función constante de valor $c \in \mathbb{C}$ es claramente una función aritmética en $\mathbb{N}$, a la cuál denotaremos en negritas como $\mathbf{c}$. Por ejemplo, $\mathbf{1}(n)=1, \forall n \in \mathbb{N}$.
+La función aritmética constante de valor $c \in \mathbb{C}$ en $\mathbb{N}$ será escrita en negritas como $\mathbf{c}$. Por ejemplo, $\mathbf{1}(n)=1, \forall n \in \mathbb{N}$.
 \end{definition}
 
 La siguiente función aritmética, conocida como función de Möbius, es de importancia central en la teoría de números. Aunque a primera vista su definición parece más bien artificial, se verá que aparece naturalmente al derivar propiedades del producto de Dirichlet.
@@ -49,20 +52,20 @@ Es fácil verificar que para cualesquiera funciones aritméticas $f$ y $g$,
 \subsection{Convolución de Dirichlet}
 
 \begin{definition}
-Sean $f$ una función aritmética, $n\in\mathbb{N}$ y $d_1,d_2,\cdots,d_k$ todos los divisores positivos de $n$. Definimos 
+Sean $f$ una función aritmética, $n\in\mathbb{N}$ y $d_1,d_2,\cdots,d_k$ todos los divisores positivos de $n$. Se define 
 \begin{equation*}
 	\sum_{d \mid n} f(d)=f(d_1)+f(d_2)+\cdots+f(d_k).
 \end{equation*}
 \end{definition}
 
 \begin{definition}[Convolución de Dirichlet]
-Si $f$ y $g$ son funciones aritméticas, definimos la \textbf{convolución de Dirichlet} o \textbf{producto de Dirichlet} de $f$ y $g$, como la función aritmética $f*g$ definida como:
+Si $f$ y $g$ son funciones aritméticas, definimos la \textbf{convolución de Dirichlet} o \textbf{producto de Dirichlet} de $f$ y $g$, como la función aritmética $f*g$ dada por 
 \begin{equation*}
 	(f*g)(n)=\sum_{d \mid n} f(d)g\left(\frac{n}{d}\right),\:\forall \: n\in\mathbb{N}.
 \end{equation*}
 \end{definition}
 
-Para ver que la operación $*$ es asociativa, conmutativa y distributiva respecto a la suma, necesitaremos algunos lemas.
+Para ver que la operación $*$ es asociativa, conmutativa y distributiva respecto a la suma son necesarios algunos lemas.
 
 \begin{lemma}
 Si $k\in\mathbb{N}$, $D\subset \mathbb{N}$ y $f,g: \{1,\ldots,k\} \longrightarrow D$ son dos funciones biyectivas y estrictamente crecientes, entonces $f=g$.
@@ -98,7 +101,7 @@ Se sigue de la definición de $(f*g)(n)$ y del \Cref{lemma:div1}.
 \end{proposition}
 
 \begin{definition}[Función identidad]\label{def:str2}
-Definimos a la función identidad $I$ como
+Se define a la función identidad $I$ como
 \begin{equation*}
 	I(n) =
 		\begin{cases}
@@ -125,7 +128,7 @@ Si $f,g$ y $h$ son funciones aritméticas entonces se verifica lo siguiente:
 Sea $n\in\mathbb{N}$, sean $d_1=1<d_2<\cdots<d_k=n$ todos los divisores positivos de $n$ y para cada $i=1,\ldots,k$ sean $c_{i,1}<c_{i,2}<\cdots<c_{i,m_i}$ los divisores positivos de $d_i$.
 \bigskip
 
-(i) Tenemos que 
+({\scshape \romannumeral 1}) Se tiene
 \begin{equation}\label{eqn:sum1}
 	((f*g)*h)(n)=\sum_{i=1}^{k} \sum_{j=1}^{m_i} f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})
 \end{equation}
@@ -133,19 +136,26 @@ y
 \begin{equation}\label{eqn:sum2}
 	(f*(g*h))(n)=\sum_{i=1}^{k} \sum_{j=1}^{m_{k+1-i}} f(d_i)g(c_{m_{k+1-i},j})h(c_{m_{k+1-i},m_{k+1-i}+1-j}).
 \end{equation}
-Definamos los conjuntos 
+
+Defínanse los conjuntos
+
 \begin{align*}
-	& A=\left\{f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i}) \: \mid i=1,\ldots,k,j=1,\ldots,m_i \: \right\} \\
+	& \mathcal{C} = \left\{f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i}) \: \mid i=1,\ldots,k,j=1,\ldots,m_i \: \right\} \\
 	& \\
-	& B=\left\{f(d_i)g(c_{m_{k+1-i},j})h(c_{m_{k+1-i},m_{k+1-i}+1-j}) \: \mid i=1,\ldots,k,j=1,\ldots,m_i \: \right\},
+	& \mathcal{D} = \left\{f(d_i)g(c_{m_{k+1-i},j})h(c_{m_{k+1-i},m_{k+1-i}+1-j}) \: \mid i=1,\ldots,k,j=1,\ldots,m_i \: \right\},
 \end{align*}
-y $C=\left\{f(a)f(b)f(c) \mid a,b,c\in\mathbb{N} \textrm{ y } a b c=n\right\}$. Afirmamos que $A=C$ y $B=C$. En efecto, si $f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})$, entonces $c_{i,j}c_{i,m_i+1-j}d_{k+1-i}=d_i d_{k+1-i}=n$, aplicando dos veces el \Cref{lemma:div1}. Recíprocamente, si $a,b,c\in\mathbb{N}$ son tales que $a b c = n$, entonces $c \mid n$, por tanto $c=d_j$, para algún $j=1,\ldots,k$, es decir, $c=d_{k+1-i}$ para $i=k+1-j$ con $i=1,\ldots,k$. Notemos entonces que por el lema \ref{lemma:div1}, necesariamente se debe tener $a b=d_i$, por lo que $a=c_{i,j}$, para algún $j=1,\ldots,m_i$ y aplicando el lema de nuevo se debe tener que $b=c_{i,m_i+1-j}$. En consecuencia $f(a)g(b)h(c)=f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})\in A$. Se sigue pues que $A=C$. Similarmente se demuestra que $B=C$.
+
+y $\mathcal{E} = \left\{f(a)f(b)f(c) \mid a,b,c\in\mathbb{N} \textrm{ y } a b c=n\right\}$. Se tiene que $\mathcal{C}=\mathcal{E}$ y $\mathcal{D}=\mathcal{E}$.
 \bigskip
 
-Se tiene pues que $A=B$ y como las sumas \eqref{eqn:sum1} y \eqref{eqn:sum2} se extienden sobre los conjuntos $A$ y $B$, entonces deben coincidir, es decir, $((f*g)*h)(n)=(f*(g*h))(n)$.
+En efecto, si $f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})$, entonces $c_{i,j}c_{i,m_i+1-j}d_{k+1-i}=d_i d_{k+1-i}=n$, aplicando dos veces el \Cref{lemma:div1}. Recíprocamente, si $a,b,c\in\mathbb{N}$ son tales que $a b c = n$, entonces $c \mid n$, por tanto $c=d_j$, para algún $j=1,\ldots,k$, es decir, $c=d_{k+1-i}$ para $i=k+1-j$ con $i=1,\ldots,k$. Notemos entonces que por el \Cref{lemma:div1}, necesariamente se debe tener $a b=d_i$, por lo que $a=c_{i,j}$, para algún $j=1,\ldots,m_i$ y aplicando el lema de nuevo se debe tener que $b=c_{i,m_i+1-j}$. En consecuencia $f(a)g(b)h(c)=f(c_{i,j})g(c_{i,m_i+1-j})h(d_{k+1-i})\in \mathcal{C}$. Se sigue pues que $\mathcal{C}=\mathcal{E}$. Similarmente se demuestra que $\mathcal{D}=\mathcal{E}$.
 \bigskip
 
-(ii) Como $1<d_i,\:\forall \: i=2,\ldots,k$ entonces $I(d_i)=0,\:\forall \: i=2,\ldots,k$, luego por la proposición \eqref{prop:dir1} se tiene que
+Se tiene pues que $\mathcal{C}=\mathcal{D}$ y como las sumas \eqref{eqn:sum1} y \eqref{eqn:sum2} se extienden sobre los conjuntos $\mathcal{C}$ y $\mathcal{D}$, entonces deben coincidir, es decir, $((f*g)*h)(n)=(f*(g*h))(n)$.
+\bigskip
+
+({\scshape \romannumeral 2}) Como $1<d_i,\:\forall \: i=2,\ldots,k$ entonces $I(d_i)=0,\:\forall \: i=2,\ldots,k$, luego por la \Cref{prop:dir1} se tiene que
+
 \begin{align*}
 	(f*I)(n) &= \sum_{i=1}^{k} f(d_i)I(d_{k+1-i})=f(d_1)I(d_k)+\cdots+f(d_k)I(d_1) \\
 			 &= f(d_k)I(d_1)=f(n)I(1)=f(n)\cdot 1=f(n)
@@ -157,20 +167,20 @@ Y
 \end{align*}
 \bigskip
 
-(iii) Tenemos que 
+({\scshape \romannumeral 3}) Se tiene
 \begin{align*}
 	(f*(g+ & h)) (n) = \sum_{i=1}^{k} f(d_i)(g+h)(d_{k+1-i}) = \sum_{i=1}^{k} f(d_i)[g(d_{k+1-i})+h(d_{k+1-i})] \\
 		   & = \sum_{i=1}^{k} f(d_i)g(d_{k+1-i})+\sum_{i=1}^{k} f(d_i)h(d_{k+1-i}) = (f*g)(n)+(f*h)(n).
 \end{align*}
 \bigskip
 
-(iv) La conmutatividad de la convolución de Dirichlet es clara, pues 
+({\scshape \romannumeral 4}) La conmutatividad de la convolución de Dirichlet es clara, pues 
 \begin{equation*}
 	(f*g)(n) = \sum_{i=1}^{k} f(d_i)g(d_{k+1-i}) = \sum_{i=1}^{k} g(d_i)f(d_{k+1-i})=(g*f)(n).
 \end{equation*}
 \end{proof}
 
-Se puede definir también una multiplicación por escalares en el conjunto de funciones aritméticas.
+Se puede definir también la bien conocida multiplicación por escalares en el conjunto de funciones aritméticas, análoga a la del espacio euclideo $\mathbb{R}^n$.
 
 \begin{definition}
 Dados $c \in \mathbb{C}$ y $f \in \mathcal{A}$, se define $c f \in \mathcal{A}$ como la función
@@ -179,8 +189,6 @@ Dados $c \in \mathbb{C}$ y $f \in \mathcal{A}$, se define $c f \in \mathcal{A}$ 
     n & \longmapsto c f(n).
 \end{align*}
 \end{definition}
-
-Es una demostración rutinaria verificar la siguiente proposición.
 
 \begin{proposition}
 El grupo abeliano $(\mathcal{A}, +)$ junto con la multiplicación por escalares definida anterioremente constituyen un espacio vectorial sobre el campo $\mathbb{C}$, donde el elemento neutro aditivo es la función $\mathbf{0}$. De ahora en adelante, este espacio vectorial será llamado simplemente el espacio de las funciones aritméticas.
