--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage[utf8]{inputenc} %character codification
 
 %Layout
-\usepackage[left=3.0cm,right=3.0cm,top=3.0cm,bottom=3.3cm,headheight=0.8cm,asymmetric,showframe]{geometry} %page size
+\usepackage[left=3.0cm,right=3.0cm,top=3.0cm,bottom=3.3cm,headheight=0.8cm,asymmetric]{geometry} %page size
 %use headheight to control the distance between header and text
 %use asymmetric to fix marginpar notes to one side
 \usepackage{fancyhdr} %footers and headers
@@ -142,7 +142,7 @@
 %toc
 %does not affect section titles in the document body
 
-\addto{\captionsspanish}{\renewcommand{\contentsname}{Índice general \vspace{0.5cm}}} %babel, toc title format
+\addto{\captionsspanish}{\renewcommand{\contentsname}{\bfseries Índice general \vspace{0.5cm}}} %babel, toc title format
 %use addto to add title to spanish title definitions
 %use captionenglish otherwise
 \renewcommand{\cfttoctitlefont}{\Large} %toc title format
